fix: image stretch

--- a/src/style.css
+++ b/src/style.css
@@ -524,6 +524,7 @@ p {
 .order__snapshot img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     border-radius: 6px;
 }
 
